src/ceal/tests/neg3/187.gold
Error: (line 11:9 'x') Parameter names in array definitions, use [(...)]
